# verbformen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  main.py  models.py  services.py
backend/tests/: test_api.py  test_services.py
data/: verbs_examples.json  verbs_forms.json
data/translations/: verbs_translation_ru.json
frontend/: api.js  app.js  index.html  styles.css
